--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 GOOGLE_ID=807496006306-af6ra3nq9ormqrk065nh0ce44n3is28u.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 MONGODB_URI=mongodb+srv://Stason1305:Stason1305@cluster0.pb0mvsv.mongodb.net/?retryWrites=true&w=majority
+
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
+NEXTAUTH_SECRET=6UYY5lTQNKC7wVcx0AMlCT0Sof4MTTmZd0pYAkJUCws=
